@@ -1,7 +1,7 @@
 Royalty-Free Non-Exclusive License USB Product-ID
 =================================================
 
-Version 2006-06-19
+Version 2008-04-07
 
 OBJECTIVE DEVELOPMENT Software GmbH hereby grants you the non-exclusive
 right to use three USB.org vendor-ID (VID) / product-ID (PID) pairs with
@@ -18,6 +18,9 @@ Atmel AVR microcontrollers:
 
  * VID = 5824 (=0x16c0) / PID = 1505 (=0x5e1) for CDC class modem devices
    Devices using this pair will be referred to as "CDC-ACM CLASS" devices.
+
+ * VID = 5824 (=0x16c0) / PID = 1508 (=0x5e4) for MIDI class devices
+   Devices using this pair will be referred to as "MIDI CLASS" devices.
 
 Since the granted right is non-exclusive, the same VID/PID pairs may be
 used by many companies and individuals for different products. To avoid
@@ -56,8 +59,8 @@ matching. This means that operating system features which are based on
 VID/PID matching only (e.g. Windows kernel level drivers, automatic actions
 when the device is plugged in etc) MUST NOT be used. The driver matching
 MUST be a comparison of the entire strings, NOT a sub-string match. For
-CDC-ACM CLASS devices, a generic class driver should be used and the
-matching is based on the USB device class.
+CDC-ACM CLASS and MIDI CLASS devices, a generic class driver should be used
+and the matching is based on the USB device class.
 
 (6) The extent to which VID/PID matching is allowed for non device-specific
 drivers or features depends on the operating system and particular VID/PID
@@ -86,8 +89,8 @@ HOW TO IMPLEMENT THESE RULES
 ============================
 
 The following rules are for VENDOR CLASS and HID CLASS devices. CDC-ACM
-CLASS devices use the operating system's class driver and don't need a
-custom driver.
+CLASS and MIDI CLASS devices use the operating system's class driver and
+don't need a custom driver.
 
 The host driver MUST iterate over all devices with the given VID/PID
 numbers in their device descriptors and query the string representation for
